Ajout de la liste de choix

--- a/page.html
+++ b/page.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <p>hello world</p>
+
+    <h2>Veuillez faire un choix ici: </h2><br>
+    <ul>
+        <li>Choix 1</li>
+        <li>Choix 2</li>
+        <li>Choix 3</li>
+    </ul>
 </body>
 </html>
